# rules_heir

./: MODULE.bazel
.github/workflows/: test.yml
examples/hello_world/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/hello_world/bazel/openfhe/: openfhe.BUILD
examples/local_heir/: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  bazel-local_heir  hello_world_test.cc
examples/local_heir/bazel/openfhe/: copts.bzl
heir/: BUILD.bazel  deps.bzl  extensions.bzl  heir_opt.bzl  heir_translate.bzl  local_repo.bzl  platforms.bzl  repo.bzl  toolchain.bzl
heir/private/: BUILD.dist.bazel.tpl  BUILD.local.bazel.tpl  heir_opt.bzl  heir_translate.bzl
