module(
    name = "hello_world",
    version = "0.0.0",
)

bazel_dep(name = "rules_heir", version = "0.0.1")
local_path_override(
    module_name = "rules_heir",
    path = "../..",
)

bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "googletest", version = "1.17.0")

# openfhe deps
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
